styles.css
/* Globals */

html {
	font-size: 1rem;
	text-align: center;
	overflow-y: scroll;
	overflow-wrap: break-word;
	background-size: 24px 24px;
	font-family: Georgia, serif;
	-webkit-tap-highlight-color: transparent;
	background-image:
		linear-gradient(#f4f4faff 1px, transparent 0),
		linear-gradient(90deg, #f4f4faff 1px, transparent 0);
}

a {
	color: #000000ff;
	font-weight: 900;
	&:hover {
		opacity: 0.64;
		text-decoration: none;
	}
}

p { & a { font-weight: normal; } } /* Link formatting for "LICENSES, CERTIFICATIONS & TRAINING" section */

hr {
	border: 0;
	border-top: 2px solid #000000ff; /* `1.66px` to prevent visual artifcating */
}

h1 { margin: 0; }

h1, h2 { font-size: 1.2rem; }

h3 {	
	margin: auto;
	font-size: 1.08rem;
	font-weight: normal;
	display: inline-block;
}

h4 {
	margin: 0;
	font-weight: normal;
	display: inline-block;
}

img {
	/* Disable element manipulation */
	user-select: none;
	-ms-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-webkit-touch-callout: none;
		/***/
	image-rendering: -webkit-optimize-contrast; /* Fix blur on Chromium browsers */
}

pre {
	/* Disable element manipulation */
	user-select: none;
	-ms-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-webkit-touch-callout: none;
		/***/
	font-weight: 900;
	line-height: 100%;
	display: inline-block;
	background-color: #ffffffa3;
}

nav {
	& a {
		font-size: 1.16rem;
		text-decoration: none;
		display: inline-block;
		margin: -16px 8px 0px 8px;
		& #depressed { opacity: 0.64; }
	}
}

iframe {
	width: 100%;
	height: 100%;
	border: none;
	background: none;
	outline: none;
	overflow: hidden;
}

details {
	display: inline-block;
	& summary {
		width: 32px;
		cursor: pointer;
		user-select: none;
		margin-bottom: 12px;
	}
}

/* Classes and IDs */

.no-print { display: auto; }

.disabled { pointer-events: none; }

.prompt-print {
	& p {
		display: none;
		margin-bottom: 32px;
	}
	& img {
		width: 12px;
		height: 12px;
	}
	& pre { margin: 0px auto 24px auto; }
}

.print { display: none; }

.hl {
	margin-left: -40px;
	& li {
		display: inline;
		position: relative;
		&:before { content: "\00a0\2022\00a0"; }
		&:first-of-type:before { content: ''; }
	}
}

.submodule { break-inside: avoid; }

.vint-border {
	display: inline-block;
	border: 3px double #000000ff;
}

.logo {
	margin-right: 4px;
	& a {
		& img {
			width: 32px;
			height: 32px;
			padding: 2px;
			vertical-align: middle;
		}
	}
}

.v-list {
	margin-left: -16px;
	& li:not(:last-child) { margin-bottom: 8px; }
}

.passive {
	color: #666666ff;
	font-weight: normal;
}

.jump-scroll {
	margin-bottom: 16px;
	display: inline-block;
	text-decoration: none;
}

#not-found {
	margin: 0;
	font-size: 2rem;
	font-family: serif;
	margin-bottom: 24px;
}

#greeting {
	& .vint-border {
		margin: 16px 0px 4px 0px;
		border: 5px double #000000ff;
	}
	& h3 {
		display: block;
		& ul { margin-bottom: 8px; }
	}
}

#name {
	display: inline-block;
	text-decoration: none;
}

#headshot {
	padding: 4px;
	/* Full-resolution on Chrome
	 * width: auto;
	 * height: auto;
	 */
	max-width: 216px;
	vertical-align: middle;
}

#socials {
	font-size: 0; /* Remove whitespace between image anchor links */
	padding-top: 4px;
	& img {
		width: 24px;
		height: 24px;
	}
	& a {
		display: inline;
		margin-right: 12px;
	}
	& * { vertical-align: middle; }
}

#blog {
	margin: auto;
	max-width: 768px;
	text-align: left;
	padding-top: 12px;
	& hgroup {
		text-align: center;
		& h1 {
			font-size: 1.48rem;
			font-weight: normal;
		}
	}
	& h2 {
		font-size: 1.08rem;
		text-align: center;
		margin: 16px 0px 8px 0px;
	}
	& hr { margin: 16px auto 0px auto; }
	& pre {
		all: initial;
		white-space: pre-wrap;
	}
	& time {
		display: block;
		text-align: center;
		margin-bottom: 16px;
		font-family: monospace, Lucida Console, Courier New;
	}
}

#valid-rss-rogers {
	display: block;
	padding-top: 36px;
}

#resume {
	margin: auto;
	max-width: 768px;
	text-align: left;
	& h1 {
		padding-top: 8px;
		font-size: 2.4rem;
	}
	& .hl {
		font-size: 0.92rem;
		font-family: monospace, Lucida Console, Courier New;
	}
}

#terminal {
	margin-top: 16px;
	font-size: 0.92rem;
	break-inside: avoid;
	box-sizing: border-box;
	padding: 0px 8px 0px 8px;
	border: 2px solid #000000ff;
	font-family: monospace, Lucida Console, Courier New;
	& b { color: #000000ff; }
	& b { color: #000000ff; }
	& a { white-space: normal; }
	& pre {
		margin-top: -16px;
		text-shadow: 0.08px 0 0, 0 0.08px 0, 0 -0.08px 0, -0.08px 0 0;
	}
	& .submodule { * { margin: 8px 0px 8px 0px; } }
}

/* "Peter Says" */
@font-face {
	font-family: "HOUSE3009";
	src: url("assets/fonts/HOUSE3009 Spaceage-Heavy-Round Regular.otf");
}

#peter-says {
	margin: auto;
	color: #000000ff;
	padding: 0px 4px;
	max-width: 768px;
	& hr { color: #ffffffff; }
	& header {
		& nav {
			margin-bottom: 24px;
			font-family: "HOUSE3009";
			& a { color: #000000ff; }
		}
	}
	& details {
		all: revert;
		& summary {
			width: auto;
			margin-bottom: 0px;
		}
	}
	& #demonstration {
		padding: 0px;
		margin: 0px 0px 16px 0px;
		& .container {
			padding: 16px;
			position: relative;
			border-radius: 16px;
			display: inline-flex;
			margin: 0px auto 24px auto;
			box-shadow: 0 8px #000000ff;
			background-color: #ffffffff;
			outline: 2px solid #000000ff;
		}
		& #score {
			top: 52%;
			left: 50%;
			width: 48px;
			color: #ffffffff;
			font-size: 1.2rem;
			position: absolute;
			border-radius: 8px;
			outline-offset: 4px;
			box-sizing:  border-box;
			border: 2px solid #000000ff;
			background-color: #000000ff;
			outline: 2px solid #000000ff;
			transform: translate(-50%, -50%);
			font-family: monospace, Lucida Console, Courier New;
		}
		& img {
			top: 46%;
			left: 50%;
			width: 128px;
			position: absolute;
			transform: translate(-50%, -50%);
		}
		& .column { float: left; }
		& .btn {
			width: 200px;
			height: 200px;
			cursor: pointer;
			transition: 0.08s;
			border-radius: 16%;
			margin: 16px 6px 16px 6px;
			box-shadow: 0 8px #000000ff;
			outline: 2px solid #000000ff;
			&:active {
				transform: translateY(4px);
				box-shadow: 0 3px #000000ff;
			}
		}
		& #btn-top-left {
			background-color: #dbe4eeff;
			border-radius: 96% 16% 96% 16%;
		}
		& #btn-top-right {
			background-color: #81a4cdff;
			border-radius: 16% 96% 16% 96%;
		}
		& #btn-bttm-left {
			background-color: #255799ff; /* UCI Blue */
			border-radius: 16% 96% 16% 96%;
		}
		& #btn-bttm-right {
			background-color: #3e7cb1ff;
			border-radius: 96% 16% 96% 16%;
		}
		& .game-over {
			color: #000000ff !important;
			background-color: #ffffffff !important;
		}
		& .pressed {
			opacity: 1;
			transform: translateY(4px);
			box-shadow: 0 4px #000000ff;
		}
		& .module {
			margin: 8px;
			width: 240px;
			height: 120px;
			font-size: 1.08rem;
			align-items: center;
			border-radius: 16px;
			display: inline-flex;
			justify-content: center;
			background-color: #ffffffff;
			outline: 2px dashed #000000ff;
			& .led {
				width: 24px;
				height: 24px;
				margin-right: 12px;
				border-radius: 50%;
				background-color: #555759;
			}
		}
	}
	& h1 {
		margin: 0.67em;
		font-size: 2.16rem;
		font-weight: normal;
		& pre {
			margin: 0;
			font-size: 0.92em;
			font-family: "HOUSE3009";
		}
	}
	& details {
		margin: 8px;
		padding: 4px;
		text-align: left;
		border-radius: 16px;
		outline-offset: 8px;
		outline: 2px solid #000000ff;
	}
	& h2, summary {
		font-size: 1.32em;
		font-family: "HOUSE3009";
	}
	& #introductions {
		margin: auto;
		& .headshot {
			width: 164px;
			padding: 4px;
			border-radius: 50%;
			background-color: #ffffffff;
			border: 2px solid #000000ff;
		}
		& th {
			padding: 8px;
			font-weight: normal;
			& b { font-family: "HOUSE3009"; }
		}
	}
	& footer { margin-bottom: 16px; }
}

#pfm {
	/* Globals */
	font-family: Arial;
	* { all: revert; }
	& header {
		margin: auto;
		max-width: 640px;
	}
	& h1 { font-size: 1.48rem; }
	& h2 {
		font-size: 1.24rem;
		font-family: monospace, Lucida Console, Courier New;
	}
	& #bop {
		width: 320px;
		height: auto;
		margin: auto;
		font-size: 0.64rem;
		& a {
			display: block;
			& img {
				width: 100%;
				vertical-align: bottom;
			}
			&:focus { outline-offset: 4px; }
		}
	}
	& #first-example { padding-right: 15px; }
	& .code {
		margin-bottom: 16px;
		display: inline-block;
		& pre {
			margin: 0;
			tab-size: 4;
			padding: 8px;
			text-align: left;
			border-radius: 4px;
			display: inline-block;
			border: 2px solid #666666ff;
			background-color: #ffffffff;
		}
	}
}

/* Media queries */

@media screen and (max-width: 359px) { pre { font-size: 0.72rem; } }

@media screen and (min-width: 401px) and (max-width: 440px) { pre { font-size: 0.96rem; } }

@media screen and (min-width: 360px) and (max-width: 400px) { pre { font-size: 0.84rem; } }

@media screen and (max-width: 720px) { /* Rudimentary tablet accommodation */
	.prompt-print {
		& p { display: block; }
		& pre { display: none; }
	}
}

@media screen and (min-width: 240px) and (max-width: 768px) {
	.hl { & li { word-break: break-all; } }
	#peter-says {
		#demonstration {
			& .btn {
				width: 136px;
				height: 136px;
			}
			& img { width: 96px; }
			& #score {
				width: 36px;
				font-size: 1rem;
			}
		}
		#introductions {
			& th { display: table-row; }
			& .headshot { width: 196px; }
		}
	}
}

@media print {
	a { text-decoration: none; }
	details { display: none; }
	details[open] {
		display: block;
		& summary { display: none; }
	}
	.print {
		display: block;
		& a {
			font-weight: normal;
			font-family: initial;
		}
		& h1 { margin-top: -8px; } /* Offset to vertically center QR code with title module */
		& img {
			top: 0;
			right: 0;
			position: absolute;
		}
	}
	.no-print { display: none; }
}

@-moz-document url-prefix() { /* Firefox browser rules */
	.prompt-print {
		& img {
			width: 9.6px !important;
			height: 9.6px !important;
		}
	}
	.logo {
		& a {
			& img { padding: 1.66px; }
		}
	}
	/* img { transform: scale(0.5, 0.5); } */
	#greeting {
		& .vint-border { border-width: 4px; }
	}
}

